--- a/languages/wpsso-am.pot
+++ b/languages/wpsso-am.pot
@@ -2,7 +2,7 @@
 # This file is distributed under the same license as the WPSSO Mobile App Meta Tags package.
 msgid ""
 msgstr ""
-"Project-Id-Version: WPSSO Mobile App Meta Tags 4.1.0\n"
+"Project-Id-Version: WPSSO Mobile App Meta Tags 4.2.0-dev.5\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/wpsso-am\n"
 "POT-Creation-Date: 2024-MO-DA HO:MI+ZONE\n"
 "MIME-Version: 1.0\n"
@@ -271,16 +271,6 @@ msgstr ""
 msgid ""
 "The <em>%s</em> information is used to create meta tags for X's (Twitter) "
 "App Card and customize the mobile App banner for Apple's mobile Safari."
-msgstr ""
-
-#: lib/filters.php:283
-msgctxt "lib file description"
-msgid "(code) Mobile App Banner"
-msgstr ""
-
-#: lib/filters.php:288
-msgctxt "lib file description"
-msgid "(code) X (Twitter) App Card Meta Tags"
 msgstr ""
 
 #: lib/submenu/mobile-apps.php:33
